--- a/Proyecto-Santos/src/components/Header/Header.css
+++ b/Proyecto-Santos/src/components/Header/Header.css
@@ -1,9 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-/* .header{
+.header{
     background-color: aqua;
 }
 
@@ -35,4 +30,4 @@
     color: black;
     font-size: 18px;
     font-weight: 700;
-} */
+}
